Implementação do tema claro e do tema escuro da IDE

--- a/packages/ide/src/app/app.component.html
+++ b/packages/ide/src/app/app.component.html
@@ -31,7 +31,7 @@
           <svg-icon
             *ngSwitchCase="'help'"
             src="assets/mdi/help-circle-outline.svg"
-            svgClass="text-quaternary"
+            svgClass="text-blue"
             svgAriaLabel="Ícone de ajuda"
           />
         </span>
