--- a/packages/ide/src/app/tab-help/tab-help.component.html
+++ b/packages/ide/src/app/tab-help/tab-help.component.html
@@ -1,7 +1,7 @@
 <as-split [direction]="isBelowMd ? 'vertical' : 'horizontal'" unit="pixel">
   <as-split-area [size]="350">
     <header>
-      <svg-icon src="assets/mdi/help-circle-outline.svg" svgClass="text-quaternary" svgAriaLabel="Ícone de ajuda" />
+      <svg-icon src="assets/mdi/help-circle-outline.svg" svgClass="text-blue" svgAriaLabel="Ícone de ajuda" />
       <span>Ajuda</span>
     </header>
 
