--- a/packages/ide/src/app/tab-editor/tab-editor.component.scss
+++ b/packages/ide/src/app/tab-editor/tab-editor.component.scss
@@ -1,4 +1,4 @@
-@use "variables";
+@use "root";
 @use "utils";
 
 :host {
@@ -17,7 +17,7 @@
 }
 
 .editor-inner {
-  background-color: shade(variables.$background-200, 15);
+  background-color: var(--#{root.$prefix}-bg-300);
   flex-grow: 1;
   display: flex;
 
@@ -42,14 +42,14 @@
   align-items: center;
   justify-content: center;
   padding: 1rem;
-  background-color: variables.$background-200;
-  color: variables.$foreground-200;
+  background-color: var(--#{root.$prefix}-bg-200);
+  color: var(--#{root.$prefix}-text-200);
   border: none;
   transition: all 0.2s ease;
   cursor: pointer;
 
   &:hover:not(:disabled) {
-    background-color: tint(variables.$background-200, 7);
+    background-color: var(--#{root.$prefix}-bg-300);
   }
 
   &:disabled {
@@ -58,7 +58,7 @@
 
     svg {
       filter: grayscale(1);
-      -webkit-transform: translateZ(0);
+      transform: translateZ(0);
     }
   }
 }
@@ -75,7 +75,7 @@
   margin-bottom: 0.5rem;
   width: 100%;
   height: 1px;
-  background-color: variables.$background-300;
+  background-color: var(--#{root.$prefix}-bg-300);
 }
 
 ::ng-deep #output {
