--- a/packages/ide/src/app/dialog-open-example/dialog-open-example.component.scss
+++ b/packages/ide/src/app/dialog-open-example/dialog-open-example.component.scss
@@ -1,11 +1,9 @@
-@use "root";
-
 :host {
   display: flex;
   flex-direction: column;
   --mdc-dialog-supporting-text-size: 14px;
   --mdc-dialog-supporting-text-line-height: 21px;
-  --mdc-dialog-supporting-text-color: var(--#{root.$prefix}-body-color);
+  --mdc-dialog-supporting-text-color: var(--pws-body-color);
   height: 100%;
 }
 
@@ -13,7 +11,7 @@ header {
   display: flex;
   align-items: center;
   padding: 8px 16px;
-  border-bottom: 1px solid var(--#{root.$prefix}-border-color);
+  border-bottom: 1px solid var(--pws-border-color);
 }
 
 mat-spinner {
@@ -48,7 +46,7 @@ ul {
     display: flex;
 
     &.active {
-      background-color: rgba(var(--#{root.$prefix}-body-color-inverted-rgb), 0.2);
+      background-color: rgba(var(--pws-body-color-inverted-rgb), 0.2);
     }
 
     span {
