--- a/packages/ide/src/app/tab-editor/tab-editor.component.scss
+++ b/packages/ide/src/app/tab-editor/tab-editor.component.scss
@@ -1,6 +1,3 @@
-@use "root";
-@use "utils";
-
 :host {
   display: flex;
   flex-direction: row;
@@ -17,7 +14,7 @@
 }
 
 .editor-inner {
-  background-color: var(--#{root.$prefix}-bg-300);
+  background-color: var(--pws-bg-300);
   flex-grow: 1;
   display: flex;
 
@@ -42,14 +39,14 @@
   align-items: center;
   justify-content: center;
   padding: 1rem;
-  background-color: var(--#{root.$prefix}-bg-200);
-  color: var(--#{root.$prefix}-text-200);
+  background-color: var(--pws-bg-200);
+  color: var(--pws-text-200);
   border: none;
   transition: all 0.2s ease;
   cursor: pointer;
 
   &:hover:not(:disabled) {
-    background-color: var(--#{root.$prefix}-bg-300);
+    background-color: var(--pws-bg-300);
   }
 
   &:disabled {
@@ -75,7 +72,7 @@
   margin-bottom: 0.5rem;
   width: 100%;
   height: 1px;
-  background-color: var(--#{root.$prefix}-bg-300);
+  background-color: var(--pws-bg-300);
 }
 
 ::ng-deep #output {
