--- a/packages/ide/src/theme-light.scss
+++ b/packages/ide/src/theme-light.scss
@@ -119,7 +119,7 @@ $PortugolWebstudio-theme: mat.m2-define-light-theme(
   // Include theme styles for core and each component used in your app.
   // Alternatively, you can import and @include the theme mixins for each component
   // that you are using.
-  @include mat.all-component-themes($PortugolWebstudio-theme);
+  @include mat.all-component-colors($PortugolWebstudio-theme);
 }
 
 $theme: (
