Diálogo de configurações

--- a/packages/ide/src/app/dialog-rename-tab/dialog-rename-tab.component.html
+++ b/packages/ide/src/app/dialog-rename-tab/dialog-rename-tab.component.html
@@ -16,7 +16,7 @@
     </mat-form-field>
   </mat-dialog-content>
 
-  <mat-dialog-actions>
+  <mat-dialog-actions align="end">
     <button type="button" mat-button mat-dialog-close>Cancelar</button>
     <button type="submit" mat-button color="primary">Renomear</button>
   </mat-dialog-actions>
