--- a/packages/ide/src/app/dialog-confirm-close-tab/dialog-confirm-close-tab.component.html
+++ b/packages/ide/src/app/dialog-confirm-close-tab/dialog-confirm-close-tab.component.html
@@ -9,7 +9,7 @@
   <p class="danger-alert">O código não salvo será perdido.</p>
 </mat-dialog-content>
 
-<mat-dialog-actions>
+<mat-dialog-actions align="end">
   <button type="button" mat-button [mat-dialog-close]="false">Não, manter aberto</button>
   <button type="button" mat-button cdkFocusInitial color="primary" [mat-dialog-close]="true">Sim, fechar</button>
 </mat-dialog-actions>
