--- a/packages/ide/src/app/tab-help/tab-help.component.scss
+++ b/packages/ide/src/app/tab-help/tab-help.component.scss
@@ -52,9 +52,29 @@ ul {
   }
 }
 
-iframe {
+.help-content {
+  display: flex;
+  flex-direction: column;
   width: 100%;
   height: 100%;
+}
+
+iframe {
+  flex-grow: 1;
   display: block;
   border: 0 none;
+}
+
+.light-theme-alert {
+  background: #2559b3;
+  color: #fff;
+  padding: 1rem;
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+
+  svg-icon {
+    width: 1.5rem;
+    height: 1.5rem;
+  }
 }
