Adicionar UTM no link ao GitHub

--- a/packages/ide/src/app/dialog-about/dialog-about.component.html
+++ b/packages/ide/src/app/dialog-about/dialog-about.component.html
@@ -26,7 +26,7 @@
 
   <div class="links">
     <a
-      href="https://github.com/dgadelha/Portugol-Webstudio"
+      href="https://github.com/dgadelha/Portugol-Webstudio?utm_source=portugol-webstudio&utm_medium=about_dialog"
       target="_blank"
       rel="external noopener"
       mat-stroked-button
