--- a/packages/ide/src/app/tab-editor/tab-editor.component.html
+++ b/packages/ide/src/app/tab-editor/tab-editor.component.html
@@ -201,14 +201,21 @@
 </div>
 
 <ng-template #shareSnackTemplate let-data>
-  <span class="share-snack">
-    <strong>Link gerado:</strong>&nbsp;&nbsp;<code>
-      <a target="_blank" [href]="data.url"
-        >{{ data.url | slice: 0 : 10 }}…{{ data.url | slice: data.url.length - 14 }}</a
-      >
-    </code>
-    &nbsp;&nbsp;&nbsp;
-    <button mat-raised-button color="primary" (click)="copyStringAndCloseSnack(data.url)">COPIAR</button>
-    <small>ℹ️ Irá expirar em 15 dias!</small>
-  </span>
+  <div class="share-snack">
+    <span class="share-snack-text">
+      <span class="share-snack-link">
+        <strong>Link gerado:</strong>
+        <a target="_blank" [href]="data.url">
+          {{ data.url | slice: 0 : 10 }}…{{ data.url | slice: data.url.length - 14 }}
+        </a>
+      </span>
+
+      <small>
+        <svg-icon src="assets/mdi/clock-alert.svg" svgClass="text-red" svgAriaLabel="Ícone de relógio" />
+        Este link expira em 15 dias.
+      </small>
+    </span>
+
+    <button mat-raised-button color="primary" type="button" (click)="copyStringAndCloseSnack(data.url)">COPIAR</button>
+  </div>
 </ng-template>
