--- a/packages/ide/src/app/tab-start/tab-start.component.html
+++ b/packages/ide/src/app/tab-start/tab-start.component.html
@@ -88,16 +88,16 @@
 <section class="info">
   <h4><svg-icon src="assets/mdi/newspaper.svg" svgAriaLabel="Ícone de jornal para notícias" />Novidades</h4>
   <p>
+    <strong>04/01/2025:</strong> Configurações de exibição do editor de código adicionadas, agora é possível alterar o
+    tamanho da fonte e a quebra de linha.
+  </p>
+  <p>
     <strong>26/12/2024:</strong> Adicionado o tema claro e a tela de configurações para escolher o tema da IDE, mais
     configurações vindo em breve.
   </p>
   <p>
     <strong>23/09/2024:</strong> Ajuste na fonte da seção Ajuda para estar disponível offline, mantendo uma boa
     experiência sem depender de conexão com a internet.
-  </p>
-  <p>
-    <strong>22/09/2024:</strong> Novo modo de salvar arquivos sem manter compatibilidade com o Portugol Studio.
-    Alteração do comportamento de atualizações do PWA.
   </p>
 </section>
 
