Ajuste no texto de acessibilidade do ícone

--- a/packages/ide/src/app/tab-editor/tab-editor.component.html
+++ b/packages/ide/src/app/tab-editor/tab-editor.component.html
@@ -75,7 +75,7 @@
         <mat-icon>
           <svg-icon
             src="assets/mdi/content-save-move.svg"
-            svgAriaLabel="Ícone de disquete com seta para baixo para ação de escolher um arquivo"
+            svgAriaLabel="Ícone de disquete com seta para a direita para ação de escolher um arquivo"
           ></svg-icon>
         </mat-icon>
 
