--- a/packages/ide/src/app/dialog-renderer/dialog-renderer.component.scss
+++ b/packages/ide/src/app/dialog-renderer/dialog-renderer.component.scss
@@ -1,3 +1,10 @@
+header {
+  display: flex;
+  align-items: center;
+  padding: 0.5rem 1rem;
+  border-bottom: 1px solid var(--pws-border-color);
+}
+
 .renderer-content {
   padding: 0 !important;
 }
