Mudanças gerais de estilo e de código

--- a/packages/ide/src/app/dialog-renderer/dialog-renderer.component.html
+++ b/packages/ide/src/app/dialog-renderer/dialog-renderer.component.html
@@ -1,5 +1,5 @@
 <header mat-dialog-title>
-  <span [innerText]="title"></span>
+  <span>{{ title }}</span>
   <s></s>
   <button tabindex="-1" type="button" mat-dialog-close mat-icon-button aria-label="Fechar diálogo">
     <svg-icon src="assets/mdi/close.svg" svgAriaLabel="Ícone de fechar diálogo" />
