Melhorias na exibição do modal do renderer

--- a/packages/ide/src/app/dialog-renderer/dialog-renderer.component.html
+++ b/packages/ide/src/app/dialog-renderer/dialog-renderer.component.html
@@ -1,4 +1,4 @@
-<header mat-dialog-title>
+<header mat-dialog-title cdkDrag cdkDragHandle cdkDragRootElement=".cdk-overlay-pane">
   <span>{{ title }}</span>
   <s></s>
   <button tabindex="-1" type="button" mat-dialog-close mat-icon-button aria-label="Fechar diálogo">
