--- a/packages/ide/src/app/dialog-renderer/dialog-renderer.component.scss
+++ b/packages/ide/src/app/dialog-renderer/dialog-renderer.component.scss
@@ -2,6 +2,11 @@ header {
   display: flex;
   align-items: center;
   padding: 0.25rem 1rem;
+  cursor: grab;
+
+  &.cdk-drag-dragging {
+    cursor: grabbing;
+  }
 }
 
 .renderer-content {
