--- a/packages/ide/src/app/tab-start/tab-start.component.html
+++ b/packages/ide/src/app/tab-start/tab-start.component.html
@@ -87,8 +87,10 @@
 
 <section class="info">
   <h4><svg-icon src="assets/mdi/newspaper.svg" svgAriaLabel="Ícone de jornal para notícias" />Novidades</h4>
-  <p><strong>07/01/2025:</strong> Correção na execução de operações lógicas.</p>
-  <p><strong>06/01/2025:</strong> Implementação da biblioteca <code>Graficos</code>.</p>
+  <p>
+    <strong>XX/01/2025:</strong> Implementação da biblioteca <code>Graficos</code> e correção na execução de operações
+    lógicas.
+  </p>
   <p>
     <strong>04/01/2025:</strong> Configurações de exibição do editor de código adicionadas, agora é possível alterar o
     tamanho da fonte e a quebra de linha. Nova opção para escolher o local de salvar o arquivo (somente no Chrome ou
