--- a/packages/ide/src/app/tab-start/tab-start.component.html
+++ b/packages/ide/src/app/tab-start/tab-start.component.html
@@ -96,6 +96,10 @@
     tamanho da fonte e a quebra de linha. Nova opção para escolher o local de salvar o arquivo (somente no Chrome ou
     Edge). Melhorias na exibição de erros.
   </p>
+  <p>
+    <strong>26/12/2024:</strong> Adicionado o tema claro e a tela de configurações para escolher o tema da IDE, mais
+    configurações vindo em breve.
+  </p>
 </section>
 
 <footer>
