--- a/packages/ide/src/app/tab-start/tab-start.component.html
+++ b/packages/ide/src/app/tab-start/tab-start.component.html
@@ -88,7 +88,7 @@
 <section class="info">
   <h4><svg-icon src="assets/mdi/newspaper.svg" svgAriaLabel="Ícone de jornal para notícias" />Novidades</h4>
   <p>
-    <strong>XX/01/2025:</strong> Implementação da biblioteca <code>Graficos</code> e correção na execução de operações
+    <strong>08/02/2025:</strong> Implementação da biblioteca <code>Graficos</code> e correção na execução de operações
     lógicas.
   </p>
   <p>
