--- a/packages/ide/src/app/tab-start/tab-start.component.html
+++ b/packages/ide/src/app/tab-start/tab-start.component.html
@@ -87,15 +87,11 @@
 
 <section class="info">
   <h4><svg-icon src="assets/mdi/newspaper.svg" svgAriaLabel="Ícone de jornal para notícias" />Novidades</h4>
+  <p><strong>18/02/2025:</strong> Documentação de Bibliotecas na seção Ajuda</p>
   <p><strong>09/02/2025:</strong> Refatoração/correção de variáveis por referência.</p>
   <p>
     <strong>08/02/2025:</strong> Implementação da biblioteca <code>Graficos</code> e correção na execução de operações
     lógicas.
-  </p>
-  <p>
-    <strong>04/01/2025:</strong> Configurações de exibição do editor de código adicionadas, agora é possível alterar o
-    tamanho da fonte e a quebra de linha. Nova opção para escolher o local de salvar o arquivo (somente no Chrome ou
-    Edge). Melhorias na exibição de erros.
   </p>
 </section>
 
